# Chat_With_Your_PDF_Multimodal_RAG_System

./: .env.example  .gitignore  README.md  pyproject.toml  technical_solution_design.md
src/: app.py  cached_retriever.py  config.py  data_extraction.py  data_extraction_llama_parse.py  data_summarize.py  data_summarize_llama_parse.py  evaluate_rag.py  evaluate_rag_with_ragas.py  main.py  rag_system_analysis.md  retrieval.py  retrieval_llama_parse.py
src/chroma_db/: chroma.sqlite3
src/evaluation_results/: evaluation_20250209_193429.json  evaluation_20250209_211029.json  evaluation_20250209_211653.json  evaluation_20250209_212032.json  evaluation_summary_20250209_212032.json
src/llama_parse_output/: llama_parse_output_1.md  llama_parse_output_2.md  llama_parse_output_3.md  llama_parse_output_4.json  llama_parse_output_4.md
src/llama_parse_summary/: summaries_4.json  summaries_4.md  summaries_5.json  summaries_5.md
src/markdown_output/: attention_paper_parsed.md
src/pdf_extracted_content/: image_page3_idx0.b64  image_page4_idx0.b64  image_page4_idx1.b64
src/tests/: test_integration.py
