[tool.poetry]
name = "chat-with-your-pdf-multimodal-rag-system"
version = "0.1.0"
description = ""
authors = ["Omar Elsherif <omarelsherif010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tiktoken = "^0.8.0"
pillow = "^11.1.0"
lxml = "^5.3.0"
chromadb = "^0.6.3"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
langchain-openai = "^0.3.3"
langchain-groq = "^0.2.4"
python-dotenv = "^1.0.1"
python-magic-bin = "^0.4.14"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
pymupdf = "^1.25.2"
pandas = "^2.2.3"
langchain-chroma = "^0.2.1"
langchain-pinecone = "^0.2.2"
pinecone = "^5.4.2"
opencv-python = "^4.11.0.86"
pypdf = ">=3.17,<4.0"
camelot-py = {version = ">=0.11.0", extras = ["cv"]}
ghostscript = "^0.7"
llama-parse = "^0.5.20"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
